Fix inspector control alignment

--- a/theme/default/main.css
+++ b/theme/default/main.css
@@ -24,6 +24,7 @@ input[type=number],
 input[type=text],
 input[type=password],
 input[type=search] {
+  vertical-align: middle;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -32,6 +33,7 @@ input[type=search] {
 }
 
 button {
+  vertical-align: middle;
   margin: 0;
   padding: 0;
   padding: 1px 5px;
